# PinocchioMeshFacade

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
example/: test_mesh_facade.py
example/BrainCo_Revo1_R/left_hand/: left_hand.gv  left_hand.urdf  left_hand_fine_collision.urdf  left_hand_stl_visual.urdf
example/BrainCo_Revo1_R/left_hand/visual/glb/: connector_link.glb  if_dip_link.glb  if_mcp_pitch_link.glb  lf_dip_link.glb  lf_mcp_pitch_link.glb  mf_dip_link.glb  mf_mcp_pitch_link.glb  rf_dip_link.glb  rf_mcp_pitch_link.glb  t_cmc_yaw_link.glb  t_mcp_link.glb
example/BrainCo_Revo1_R/left_hand/visual/stl/: connector_link.stl  if_dip_link.stl  if_mcp_pitch_link.stl  lf_dip_link.stl  lf_mcp_pitch_link.stl  mf_dip_link.stl  mf_mcp_pitch_link.stl  rf_dip_link.stl  rf_mcp_pitch_link.stl  t_cmc_yaw_link.stl  t_mcp_link.stl
example/BrainCo_Revo1_R/right_hand/: right_hand.gv  right_hand_fine_collision.urdf  right_hand_glb_visual.urdf  right_hand_stl_visual.urdf
example/BrainCo_Revo1_R/right_hand/visual/glb/: if_dip_link.glb  if_mcp_pitch_link.glb  lf_dip_link.glb  lf_mcp_pitch_link.glb  mf_dip_link.glb  mf_mcp_pitch_link.glb  rf_dip_link.glb  rf_mcp_pitch_link.glb  t_cmc_yaw_link.glb  t_mcp_link.glb
example/BrainCo_Revo1_R/right_hand/visual/stl/: connector_link.stl  if_dip_link.stl  if_mcp_pitch_link.stl  lf_dip_link.stl  lf_mcp_pitch_link.stl  mf_mcp_pitch_link.stl  rf_dip_link.stl  rf_mcp_pitch_link.stl  t_cmc_yaw_link.stl  t_mcp_link.stl
pinocchio_mesh_facade/: __init__.py  base_types.py  kinematics_manager.py  link_tree_graph.py  logger.py  mesh.py  mesh_loader.py  mesh_path_resolver.py  mesh_processor.py  mesh_resource_registry.py  mimic_joint_resolver.py  pinocchio_mesh_facade.py  pinocchio_robot_model.py
