# SPDX-FileCopyrightText: Copyright (c) 2023-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinocchio-mesh-facade"
description = "A Python library for extracting and processing robot model meshes using Pinocchio."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Chase6305"}]
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy>=1.7.0",
    "setuptools_scm>=6.2",
    "trimesh>=4.1.0,<=4.10.0",
    "wheel",
    "yourdfpy>=0.0.53",
    "pin>=3.1.0,<=3.9.0"
]

[project.optional-dependencies]

dev = [
    "build",
    "ruff",
    "pytest>6.2.5,<9.0",
    "pytest-cov",
    "pytest-xdist",
    "ty",
]

doc = [
    "anybadge",
    "sphinx",
    "sphinx_rtd_theme",
    "graphviz>=0.20.1",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx_reredirects",
]

benchmark = [
    "tabulate",
    "pandas",
    "robometrics[evaluator] @ git+https://github.com/fishbotics/robometrics.git",
    "pin",
    "seaborn",
]

[project.urls]
Repository = "https://github.com/chase6305/PinocchioMeshFacade"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
# Include compiled shared objects
"*" = ["*.so"]

[tool.ruff]
line-length = 99
exclude = [".git", "build", "deprecated", "dist", "venv"]
target-version = "py38"

[tool.ruff.format]
# Use ruff's formatter instead of black (same style, much faster)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Enable flake8 rules (F), pycodestyle errors (E) and warnings (W)
# Plus docstring conventions (D) and isort (I)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

ignore = [
    "E203",  # whitespace before ':'
    "E731",  # do not assign a lambda expression, use a def
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Replicate isort configuration
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["pinocchio_mesh_facade"]


[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-l",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-n", "4",
    "--dist", "loadscope",
]
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "__pycache__",
    "_build",
    "docs",
    "examples",
    "content",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.report]
# NOTE: Single-quoted strings are required in TOML for regular expressions
exclude_lines = [
	"pragma: no cover", # Need to re-enable the standard no cover match
	'^\s*pass\s*$',  # Skip any pass lines
    "wp.kernel",
    "wp.func",
    "torch.jit.script",
    "abstractmethod",
    "def backward",
    "staticmethod\ndef forward",
    "get_torch_jit_decorator",
    "deprecated",
]

omit = [
    "example/*",
    "tests/*",
]

[tool.interrogate]
ignore-regex = ["forward", "backward"]

[tool.ty]
# Files and directories to exclude from type checking
extend-exclude = [
    ".git",
    "build",
    "deprecated",
    "dist",
    "venv",
    ".venv",
]

# Configure specific type checking rules
# See: https://docs.astral.sh/ty/rules/
[tool.ty.lint]
# Add any specific rule configurations here as needed